--- a/styles/style.css
+++ b/styles/style.css
@@ -121,7 +121,64 @@ main {
   margin: 130px auto;
 }
 /* about me related styles */
+.about-me {
+  border-radius: 10px;
+  background: rgba(255, 248, 243, 1);
+  padding: 130px 150px;
+}
+.about-me-title {
+  color: rgba(24, 24, 24, 1);
+  font-size: 35px;
+  font-weight: 700;
+  line-height: 100%;
+  letter-spacing: 0%;
+  text-align: center;
+  margin-top: 0;
+}
+.about-me-para {
+  color: rgba(117, 117, 117, 1);
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0%;
+  text-align: center;
+  width: 827px;
+  height: 120px;
+  margin-top: 0;
+  margin-bottom: 30px;
+}
+.about-description {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  border: 1px solid rgba(0, 0, 0, 1);
+  background: rgba(255, 255, 255, 1);
+}
 
+.info-container {
+  display: flex;
+  gap: 50px;
+}
+.info h3 {
+  color: rgba(117, 117, 117, 1);
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0%;
+  text-align: center;
+  margin-bottom: 5px;
+}
+.info p {
+  color: rgba(117, 117, 117, 1);
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 30px;
+  letter-spacing: 0%;
+  text-align: center;
+  margin-top: 0;
+}
 /* phone */
 @media screen and (max-width: 576px) {
   * {
