--- a/styles/style.css
+++ b/styles/style.css
@@ -216,6 +216,9 @@ main {
     flex-direction: column;
     margin-top: 155px;
   }
+  .about-description {
+    border: none;
+  }
 }
 /* tablet */
 @media screen and (min-width: 576.01px) and (max-width: 1025px) {
