--- a/styles/style.css
+++ b/styles/style.css
@@ -179,6 +179,64 @@ main {
   text-align: center;
   margin-top: 0;
 }
+
+/* what i do related styles */
+.what-i-do {
+  margin-top: 80px;
+}
+.what-i-do-title {
+  color: rgba(24, 24, 24, 1);
+  font-size: 35px;
+  font-weight: 700;
+  line-height: 100%;
+  letter-spacing: 0%;
+  text-align: center;
+}
+.what-i-do-para {
+  color: rgba(117, 117, 117, 1);
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0%;
+  width: 909px;
+  height: 90px;
+  text-align: center;
+  margin: 0;
+}
+.what-i-do-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.skill-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+  margin-top: 50px;
+}
+.skills {
+  width: 267px;
+  height: 300px;
+  border-radius: 5px;
+  background: #fff;
+  box-shadow: 0 6px 50px 0 rgba(0, 0, 0, 0.06);
+  padding: 30px;
+}
+.skill-title {
+  color: #181818;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.skill-para {
+  color: #757575;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 28px; /* 175% */
+}
 /* phone */
 @media screen and (max-width: 576px) {
   * {
@@ -219,6 +277,19 @@ main {
   .about-description {
     border: none;
   }
+  .what-i-do-para {
+    width: 100%;
+    height: 100%;
+    text-align: justify;
+    margin-top: 20px;
+  }
+  .skill-container {
+    flex-direction: column;
+  }
+  .what-i-do {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
 }
 /* tablet */
 @media screen and (min-width: 576.01px) and (max-width: 1025px) {
@@ -236,6 +307,16 @@ main {
     padding: 10px;
   }
   .info-container {
+    margin-top: 20px;
+  }
+  .skill-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .what-i-do-para {
+    width: 100%;
+    height: 100%;
+    text-align: justify;
     margin-top: 20px;
   }
 }
