--- a/styles/style.css
+++ b/styles/style.css
@@ -237,6 +237,69 @@ main {
   font-weight: 400;
   line-height: 28px; /* 175% */
 }
+/* resume related styles */
+.resume {
+  margin-top: 130px;
+  margin-bottom: 100px;
+}
+.resume-heading {
+  color: rgba(24, 24, 24, 1);
+  font-size: 35px;
+  font-weight: 700;
+  line-height: 100%;
+  letter-spacing: 0%;
+  text-align: center;
+}
+.resume-title {
+  color: rgba(71, 71, 71, 1);
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 100%;
+  letter-spacing: 0%;
+  text-align: left;
+}
+.title {
+  color: rgba(71, 71, 71, 1);
+  font-size: 25px;
+  font-weight: 700;
+  line-height: 100%;
+  letter-spacing: 0%;
+  text-align: left;
+  margin-bottom: 0;
+  margin-top: 30px;
+}
+.sub-title {
+  color: rgba(117, 117, 117, 1);
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 100%;
+  letter-spacing: 0%;
+  text-align: left;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+.para {
+  color: rgba(117, 117, 117, 1);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 28px;
+  letter-spacing: 0%;
+  text-align: left;
+  width: 460px;
+  height: 84px;
+}
+.resume hr {
+  background: #d1d1d1;
+}
+.resume-container {
+  display: flex;
+  gap: 20px;
+}
+.btn-container {
+  text-align: center;
+  margin-top: 50px;
+}
+
 /* phone */
 @media screen and (max-width: 576px) {
   * {
@@ -289,6 +352,26 @@ main {
   .what-i-do {
     margin-left: 10px;
     margin-right: 10px;
+  }
+  .resume-container {
+    flex-direction: column;
+  }
+  .para {
+    width: 80%;
+    height: 100%;
+    text-align: justify;
+  }
+  .resume hr {
+    display: none;
+  }
+  .resume-heading {
+    margin-bottom: 50px;
+  }
+  .resume-heading {
+    font-size: 25px;
+  }
+  .title {
+    font-size: 20px;
   }
 }
 /* tablet */
