mobile design updated

--- a/styles/style.css
+++ b/styles/style.css
@@ -379,7 +379,10 @@ main {
     margin-right: 10px;
   }
   .resume-column {
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 }
 /* tablet */
